Updated chat functionality and home page UI.